// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Meter background 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  max-width: 100%;
  overflow: hidden;
}

.c1 path {
  -webkit-transition: stroke 0.3s,stroke-width 0.3s;
  transition: stroke 0.3s,stroke-width 0.3s;
}

<div
  class="c0"
>
  <svg
    class="c1"
    height="24"
    preserveAspectRatio="none"
    viewBox="0 0 384 24"
    width="384"
  >
    <path
      d="M 0,12 L 384,12"
      fill="none"
      stroke="#EDEDED"
      stroke-linecap="square"
      stroke-width="24"
    />
    <path
      d="M 0,12 L 76.8,12"
      fill="none"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="24"
    />
  </svg>
  <svg
    class="c1"
    height="24"
    preserveAspectRatio="none"
    viewBox="0 0 384 24"
    width="384"
  >
    <path
      d="M 0,12 L 384,12"
      fill="none"
      stroke="#EDEDED"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 0,12 L 76.8,12"
      fill="none"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="24"
    />
  </svg>
  <svg
    class="c1"
    height="384"
    viewBox="0 0 384 384"
    width="384"
  >
    <circle
      cx="192"
      cy="192"
      fill="none"
      r="180"
      stroke="#EDEDED"
      stroke-linecap="square"
      stroke-width="24"
    />
    <path
      d="M 363.1901729331 136.3769410125 A 180.0000000000 180.0000000000 0 0 0 192.0000000000 12.0000000000"
      fill="none"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="24"
    />
  </svg>
  <svg
    class="c1"
    height="384"
    viewBox="0 0 384 384"
    width="384"
  >
    <circle
      cx="192"
      cy="192"
      fill="none"
      r="180"
      stroke="#EDEDED"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 363.1901729331 136.3769410125 A 180.0000000000 180.0000000000 0 0 0 192.0000000000 12.0000000000"
      fill="none"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="24"
    />
  </svg>
  <svg
    class="c1"
    height="24"
    preserveAspectRatio="none"
    viewBox="0 0 384 24"
    width="384"
  >
    <path
      d="M 0,12 L 384,12"
      fill="none"
      stroke="#EDEDED"
      stroke-linecap="square"
      stroke-opacity="0.2"
      stroke-width="24"
    />
    <path
      d="M 0,12 L 76.8,12"
      fill="none"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="24"
    />
  </svg>
</div>
`;

exports[`Meter basic 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  max-width: 100%;
  overflow: hidden;
}

.c1 path {
  -webkit-transition: stroke 0.3s,stroke-width 0.3s;
  transition: stroke 0.3s,stroke-width 0.3s;
}

<div
  class="c0"
>
  <svg
    class="c1"
    height="24"
    preserveAspectRatio="none"
    viewBox="0 0 384 24"
    width="384"
  >
    <path
      d="M 0,12 L 384,12"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 0,12 L 76.8,12"
      fill="none"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="24"
    />
  </svg>
</div>
`;

exports[`Meter boundary values 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  max-width: 100%;
  overflow: hidden;
}

.c1 path {
  -webkit-transition: stroke 0.3s,stroke-width 0.3s;
  transition: stroke 0.3s,stroke-width 0.3s;
}

<div
  class="c0"
>
  <svg
    class="c1"
    height="384"
    viewBox="0 0 384 384"
    width="384"
  >
    <circle
      cx="192"
      cy="192"
      fill="none"
      r="180"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 368.6870620811 157.6243968322 A 180.0000000000 180.0000000000 0 0 0 192.0000000000 12.0000000000"
      fill="none"
      stroke="#00873D"
      stroke-linecap="butt"
      stroke-width="24"
    />
    <path
      d="M 191.9997957965 12.0000000001 A 180.0000000000 180.0000000000 0 1 0 368.6870620811 157.6243968322"
      fill="none"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="24"
    />
  </svg>
</div>
`;

exports[`Meter default 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  max-width: 100%;
  overflow: hidden;
}

.c1 path {
  -webkit-transition: stroke 0.3s,stroke-width 0.3s;
  transition: stroke 0.3s,stroke-width 0.3s;
}

<div
  class="c0"
>
  <svg
    class="c1"
    height="24"
    preserveAspectRatio="none"
    viewBox="0 0 384 24"
    width="384"
  >
    <path
      d="M 0,12 L 384,12"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
  </svg>
</div>
`;

exports[`Meter large circle values 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  max-width: 100%;
  overflow: hidden;
}

.c1 path {
  -webkit-transition: stroke 0.3s,stroke-width 0.3s;
  transition: stroke 0.3s,stroke-width 0.3s;
}

<div
  class="c0"
>
  <svg
    class="c1"
    height="192"
    viewBox="0 0 192 192"
    width="192"
  >
    <circle
      cx="96"
      cy="96"
      fill="none"
      r="90"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="12"
    />
    <path
      d="M 156.0149675602 28.9313510740 A 90.0000000000 90.0000000000 0 0 0 96.0000000000 6.0000000000"
      fill="none"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="12"
    />
    <path
      d="M 182.4540298401 70.9859894379 A 90.0000000000 90.0000000000 0 0 0 156.0149675602 28.9313510740"
      fill="none"
      stroke="#00873D"
      stroke-linecap="butt"
      stroke-width="12"
    />
    <path
      d="M 183.4934330444 117.0926331716 A 90.0000000000 90.0000000000 0 0 0 182.4540298401 70.9859894379"
      fill="none"
      stroke="#3D138D"
      stroke-linecap="butt"
      stroke-width="12"
    />
    <path
      d="M 167.6249510067 150.4964805587 A 90.0000000000 90.0000000000 0 0 0 183.4934330444 117.0926331716"
      fill="none"
      stroke="#00739D"
      stroke-linecap="butt"
      stroke-width="12"
    />
    <path
      d="M 96.0000000000 6.0000000000 A 90.0000000000 90.0000000000 0 1 0 167.6249510067 150.4964805587"
      fill="none"
      stroke="#A2423D"
      stroke-linecap="butt"
      stroke-width="12"
    />
  </svg>
</div>
`;

exports[`Meter many values 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  max-width: 100%;
  overflow: hidden;
}

.c1 path {
  -webkit-transition: stroke 0.3s,stroke-width 0.3s;
  transition: stroke 0.3s,stroke-width 0.3s;
}

<div
  class="c0"
>
  <svg
    class="c1"
    height="24"
    preserveAspectRatio="none"
    viewBox="0 0 384 24"
    width="384"
  >
    <path
      d="M 0,12 L 384,12"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 336,12 L 384,12"
      fill="none"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="24"
    />
    <path
      d="M 288,12 L 336,12"
      fill="none"
      stroke="#00873D"
      stroke-linecap="butt"
      stroke-width="24"
    />
    <path
      d="M 240,12 L 288,12"
      fill="none"
      stroke="#3D138D"
      stroke-linecap="butt"
      stroke-width="24"
    />
    <path
      d="M 192,12 L 240,12"
      fill="none"
      stroke="#00739D"
      stroke-linecap="butt"
      stroke-width="24"
    />
    <path
      d="M 144,12 L 192,12"
      fill="none"
      stroke="#A2423D"
      stroke-linecap="butt"
      stroke-width="24"
    />
    <path
      d="M 96,12 L 144,12"
      fill="none"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="24"
    />
    <path
      d="M 48,12 L 96,12"
      fill="none"
      stroke="#00873D"
      stroke-linecap="butt"
      stroke-width="24"
    />
    <path
      d="M 0,12 L 48,12"
      fill="none"
      stroke="#3D138D"
      stroke-linecap="butt"
      stroke-width="24"
    />
  </svg>
</div>
`;

exports[`Meter round 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  max-width: 100%;
  overflow: hidden;
  border-radius: 24px;
}

.c1 path {
  -webkit-transition: stroke 0.3s,stroke-width 0.3s;
  transition: stroke 0.3s,stroke-width 0.3s;
}

.c2 {
  max-width: 100%;
  overflow: hidden;
}

.c2 path {
  -webkit-transition: stroke 0.3s,stroke-width 0.3s;
  transition: stroke 0.3s,stroke-width 0.3s;
}

<div
  class="c0"
>
  <svg
    class="c1"
    height="24"
    preserveAspectRatio="none"
    viewBox="0 0 384 24"
    width="384"
  >
    <path
      d="M 12,12 L 372,12"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="round"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 12,12 L 84,12"
      fill="none"
      stroke="#6FFFB0"
      stroke-linecap="round"
      stroke-width="24"
    />
  </svg>
  <svg
    class="c2"
    height="384"
    viewBox="0 0 384 384"
    width="384"
  >
    <circle
      cx="192"
      cy="192"
      fill="none"
      r="180"
      stroke="#F2F2F2"
      stroke-linecap="round"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 363.1901729331 136.3769410125 A 180.0000000000 180.0000000000 0 0 0 192.0000000000 12.0000000000"
      fill="none"
      stroke="#6FFFB0"
      stroke-linecap="round"
      stroke-width="24"
    />
    <path
      d="M 363.1901729331 136.3769410125 A 180.0000000000 180.0000000000 0 0 0 362.6982579371 134.8851618471"
      fill="none"
      stroke="#6FFFB0"
      stroke-linecap="round"
      stroke-width="24"
    />
  </svg>
  <svg
    class="c2"
    height="192"
    viewBox="0 0 384 192"
    width="384"
  >
    <path
      d="M 372.0000000000 192.0000000000 A 180.0000000000 180.0000000000 0 0 0 12.0000000000 192.0000000000"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="round"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 46.3769410125 86.1986545874 A 180.0000000000 180.0000000000 0 0 0 12.0000000000 192.0000000000"
      fill="none"
      stroke="#6FFFB0"
      stroke-linecap="round"
      stroke-width="24"
    />
    <path
      d="M 46.3769410125 86.1986545874 A 180.0000000000 180.0000000000 0 0 0 45.4592066959 87.4734679720"
      fill="none"
      stroke="#6FFFB0"
      stroke-linecap="round"
      stroke-width="24"
    />
  </svg>
</div>
`;

exports[`Meter single 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  max-width: 100%;
  overflow: hidden;
}

.c1 path {
  -webkit-transition: stroke 0.3s,stroke-width 0.3s;
  transition: stroke 0.3s,stroke-width 0.3s;
}

<div
  class="c0"
>
  <svg
    class="c1"
    height="24"
    preserveAspectRatio="none"
    viewBox="0 0 384 24"
    width="384"
  >
    <path
      d="M 0,12 L 384,12"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 0,12 L 96,12"
      fill="none"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="24"
    />
  </svg>
</div>
`;

exports[`Meter size 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  max-width: 100%;
  overflow: hidden;
}

.c1 path {
  -webkit-transition: stroke 0.3s,stroke-width 0.3s;
  transition: stroke 0.3s,stroke-width 0.3s;
}

<div
  class="c0"
>
  <svg
    class="c1"
    height="24"
    preserveAspectRatio="none"
    viewBox="0 0 96 24"
    width="96"
  >
    <path
      d="M 0,12 L 96,12"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 0,12 L 19.2,12"
      fill="none"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="24"
    />
  </svg>
  <svg
    class="c1"
    height="24"
    preserveAspectRatio="none"
    viewBox="0 0 192 24"
    width="192"
  >
    <path
      d="M 0,12 L 192,12"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 0,12 L 38.4,12"
      fill="none"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="24"
    />
  </svg>
  <svg
    class="c1"
    height="24"
    preserveAspectRatio="none"
    viewBox="0 0 384 24"
    width="384"
  >
    <path
      d="M 0,12 L 384,12"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 0,12 L 76.8,12"
      fill="none"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="24"
    />
  </svg>
  <svg
    class="c1"
    height="24"
    preserveAspectRatio="none"
    viewBox="0 0 768 24"
    width="768"
  >
    <path
      d="M 0,12 L 768,12"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 0,12 L 153.6,12"
      fill="none"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="24"
    />
  </svg>
  <svg
    class="c1"
    height="24"
    preserveAspectRatio="none"
    viewBox="0 0 1152 24"
    width="1152"
  >
    <path
      d="M 0,12 L 1152,12"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 0,12 L 230.4,12"
      fill="none"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="24"
    />
  </svg>
  <svg
    class="c1"
    height="24"
    preserveAspectRatio="none"
    viewBox="0 0 24 24"
    width="24"
  >
    <path
      d="M 0,12 L 24,12"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 0,12 L 4.8,12"
      fill="none"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="24"
    />
  </svg>
  <svg
    class="c1"
    height="24"
    preserveAspectRatio="none"
    viewBox="0 0 288 24"
    width="100%"
  >
    <path
      d="M 0,12 L 288,12"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 0,12 L 57.6,12"
      fill="none"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="24"
    />
  </svg>
  <svg
    class="c1"
    height="96"
    viewBox="0 0 96 96"
    width="96"
  >
    <circle
      cx="48"
      cy="48"
      fill="none"
      r="36"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 82.2380345866 36.8753882025 A 36.0000000000 36.0000000000 0 0 0 48.0000000000 12.0000000000"
      fill="none"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="24"
    />
  </svg>
  <svg
    class="c1"
    height="192"
    viewBox="0 0 192 192"
    width="192"
  >
    <circle
      cx="96"
      cy="96"
      fill="none"
      r="84"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 175.8887473688 70.0425724725 A 84.0000000000 84.0000000000 0 0 0 96.0000000000 12.0000000000"
      fill="none"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="24"
    />
  </svg>
  <svg
    class="c1"
    height="384"
    viewBox="0 0 384 384"
    width="384"
  >
    <circle
      cx="192"
      cy="192"
      fill="none"
      r="180"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 363.1901729331 136.3769410125 A 180.0000000000 180.0000000000 0 0 0 192.0000000000 12.0000000000"
      fill="none"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="24"
    />
  </svg>
  <svg
    class="c1"
    height="768"
    viewBox="0 0 768 768"
    width="768"
  >
    <circle
      cx="384"
      cy="384"
      fill="none"
      r="372"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 737.7930240618 269.0456780925 A 372.0000000000 372.0000000000 0 0 0 384.0000000000 12.0000000000"
      fill="none"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="24"
    />
  </svg>
  <svg
    class="c1"
    height="1152"
    viewBox="0 0 1152 1152"
    width="1152"
  >
    <circle
      cx="576"
      cy="576"
      fill="none"
      r="564"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 1112.3958751905 401.7144151725 A 564.0000000000 564.0000000000 0 0 0 576.0000000000 12.0000000000"
      fill="none"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="24"
    />
  </svg>
  <svg
    class="c1"
    height="55"
    viewBox="0 0 55 55"
    width="55"
  >
    <circle
      cx="27.5"
      cy="27.5"
      fill="none"
      r="15.5"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 42.2413760026 22.7102365872 A 15.5000000000 15.5000000000 0 0 0 27.5000000000 12.0000000000"
      fill="none"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="24"
    />
  </svg>
  <svg
    class="c1"
    height="100%"
    viewBox="0 0 288 288"
    width="100%"
  >
    <circle
      cx="144"
      cy="144"
      fill="none"
      r="132"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 269.5394601510 103.2097567425 A 132.0000000000 132.0000000000 0 0 0 144.0000000000 12.0000000000"
      fill="none"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="24"
    />
  </svg>
  <svg
    class="c1"
    height="96"
    viewBox="0 0 96 96"
    width="96"
  >
    <circle
      cx="48"
      cy="48"
      fill="none"
      r="24"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="48"
    />
    <path
      d="M 70.8253563911 40.5835921350 A 24.0000000000 24.0000000000 0 0 0 48.0000000000 24.0000000000"
      fill="none"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="48"
    />
  </svg>
  <svg
    class="c1"
    height="192"
    viewBox="0 0 192 192"
    width="192"
  >
    <circle
      cx="96"
      cy="96"
      fill="none"
      r="48"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="96"
    />
    <path
      d="M 141.6507127822 81.1671842700 A 48.0000000000 48.0000000000 0 0 0 96.0000000000 48.0000000000"
      fill="none"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="96"
    />
  </svg>
  <svg
    class="c1"
    height="384"
    viewBox="0 0 384 384"
    width="384"
  >
    <circle
      cx="192"
      cy="192"
      fill="none"
      r="96"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="192"
    />
    <path
      d="M 283.3014255643 162.3343685400 A 96.0000000000 96.0000000000 0 0 0 192.0000000000 96.0000000000"
      fill="none"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="192"
    />
  </svg>
  <svg
    class="c1"
    height="768"
    viewBox="0 0 768 768"
    width="768"
  >
    <circle
      cx="384"
      cy="384"
      fill="none"
      r="192"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="384"
    />
    <path
      d="M 566.6028511287 324.6687370800 A 192.0000000000 192.0000000000 0 0 0 384.0000000000 192.0000000000"
      fill="none"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="384"
    />
  </svg>
  <svg
    class="c1"
    height="1152"
    viewBox="0 0 1152 1152"
    width="1152"
  >
    <circle
      cx="576"
      cy="576"
      fill="none"
      r="288"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="576"
    />
    <path
      d="M 849.9042766930 487.0031056200 A 288.0000000000 288.0000000000 0 0 0 576.0000000000 288.0000000000"
      fill="none"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="576"
    />
  </svg>
  <svg
    class="c1"
    height="55"
    viewBox="0 0 55 55"
    width="55"
  >
    <circle
      cx="27.5"
      cy="27.5"
      fill="none"
      r="13.75"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="27.5"
    />
    <path
      d="M 40.5770270991 23.2510163273 A 13.7500000000 13.7500000000 0 0 0 27.5000000000 13.7500000000"
      fill="none"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="27.5"
    />
  </svg>
  <svg
    class="c1"
    height="100%"
    viewBox="0 0 288 288"
    width="100%"
  >
    <circle
      cx="144"
      cy="144"
      fill="none"
      r="72"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="144"
    />
    <path
      d="M 212.4760691733 121.7507764050 A 72.0000000000 72.0000000000 0 0 0 144.0000000000 72.0000000000"
      fill="none"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="144"
    />
  </svg>
  <svg
    class="c1"
    height="48"
    viewBox="0 0 96 48"
    width="96"
  >
    <path
      d="M 84.0000000000 48.0000000000 A 36.0000000000 36.0000000000 0 0 0 12.0000000000 48.0000000000"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 18.8753882025 26.8397309175 A 36.0000000000 36.0000000000 0 0 0 12.0000000000 48.0000000000"
      fill="none"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="24"
    />
  </svg>
  <svg
    class="c1"
    height="96"
    viewBox="0 0 192 96"
    width="192"
  >
    <path
      d="M 180.0000000000 96.0000000000 A 84.0000000000 84.0000000000 0 0 0 12.0000000000 96.0000000000"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 28.0425724725 46.6260388074 A 84.0000000000 84.0000000000 0 0 0 12.0000000000 96.0000000000"
      fill="none"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="24"
    />
  </svg>
  <svg
    class="c1"
    height="192"
    viewBox="0 0 384 192"
    width="384"
  >
    <path
      d="M 372.0000000000 192.0000000000 A 180.0000000000 180.0000000000 0 0 0 12.0000000000 192.0000000000"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 46.3769410125 86.1986545874 A 180.0000000000 180.0000000000 0 0 0 12.0000000000 192.0000000000"
      fill="none"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="24"
    />
  </svg>
  <svg
    class="c1"
    height="384"
    viewBox="0 0 768 384"
    width="768"
  >
    <path
      d="M 756.0000000000 384.0000000000 A 372.0000000000 372.0000000000 0 0 0 12.0000000000 384.0000000000"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 83.0456780925 165.3438861472 A 372.0000000000 372.0000000000 0 0 0 12.0000000000 384.0000000000"
      fill="none"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="24"
    />
  </svg>
  <svg
    class="c1"
    height="576"
    viewBox="0 0 1152 576"
    width="1152"
  >
    <path
      d="M 1140.0000000000 576.0000000000 A 564.0000000000 564.0000000000 0 0 0 12.0000000000 576.0000000000"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 119.7144151725 244.4891177070 A 564.0000000000 564.0000000000 0 0 0 12.0000000000 576.0000000000"
      fill="none"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="24"
    />
  </svg>
  <svg
    class="c1"
    height="27.5"
    viewBox="0 0 55 27.5"
    width="55"
  >
    <path
      d="M 43.0000000000 27.5000000000 A 15.5000000000 15.5000000000 0 0 0 12.0000000000 27.5000000000"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 14.9602365872 18.3893285895 A 15.5000000000 15.5000000000 0 0 0 12.0000000000 27.5000000000"
      fill="none"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="24"
    />
  </svg>
  <svg
    class="c1"
    height="100%"
    viewBox="0 0 288 144"
    width="100%"
  >
    <path
      d="M 276.0000000000 144.0000000000 A 132.0000000000 132.0000000000 0 0 0 12.0000000000 144.0000000000"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 37.2097567425 66.4123466974 A 132.0000000000 132.0000000000 0 0 0 12.0000000000 144.0000000000"
      fill="none"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="24"
    />
  </svg>
</div>
`;

exports[`Meter thickness 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  max-width: 100%;
  overflow: hidden;
}

.c1 path {
  -webkit-transition: stroke 0.3s,stroke-width 0.3s;
  transition: stroke 0.3s,stroke-width 0.3s;
}

<div
  class="c0"
>
  <svg
    class="c1"
    height="6"
    preserveAspectRatio="none"
    viewBox="0 0 384 6"
    width="384"
  >
    <path
      d="M 0,3 L 384,3"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="6"
    />
    <path
      d="M 0,3 L 76.8,3"
      fill="none"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="6"
    />
  </svg>
  <svg
    class="c1"
    height="12"
    preserveAspectRatio="none"
    viewBox="0 0 384 12"
    width="384"
  >
    <path
      d="M 0,6 L 384,6"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="12"
    />
    <path
      d="M 0,6 L 76.8,6"
      fill="none"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="12"
    />
  </svg>
  <svg
    class="c1"
    height="24"
    preserveAspectRatio="none"
    viewBox="0 0 384 24"
    width="384"
  >
    <path
      d="M 0,12 L 384,12"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 0,12 L 76.8,12"
      fill="none"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="24"
    />
  </svg>
  <svg
    class="c1"
    height="48"
    preserveAspectRatio="none"
    viewBox="0 0 384 48"
    width="384"
  >
    <path
      d="M 0,24 L 384,24"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="48"
    />
    <path
      d="M 0,24 L 76.8,24"
      fill="none"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="48"
    />
  </svg>
  <svg
    class="c1"
    height="96"
    preserveAspectRatio="none"
    viewBox="0 0 384 96"
    width="384"
  >
    <path
      d="M 0,48 L 384,48"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="96"
    />
    <path
      d="M 0,48 L 76.8,48"
      fill="none"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="96"
    />
  </svg>
  <svg
    class="c1"
    height="55"
    preserveAspectRatio="none"
    viewBox="0 0 384 55"
    width="384"
  >
    <path
      d="M 0,27.5 L 384,27.5"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="55"
    />
    <path
      d="M 0,27.5 L 76.8,27.5"
      fill="none"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="55"
    />
  </svg>
  <svg
    class="c1"
    height="384"
    viewBox="0 0 384 384"
    width="384"
  >
    <circle
      cx="192"
      cy="192"
      fill="none"
      r="189"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="6"
    />
    <path
      d="M 371.7496815798 133.5957880631 A 189.0000000000 189.0000000000 0 0 0 192.0000000000 3.0000000000"
      fill="none"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="6"
    />
  </svg>
  <svg
    class="c1"
    height="384"
    viewBox="0 0 384 384"
    width="384"
  >
    <circle
      cx="192"
      cy="192"
      fill="none"
      r="186"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="12"
    />
    <path
      d="M 368.8965120309 134.5228390463 A 186.0000000000 186.0000000000 0 0 0 192.0000000000 6.0000000000"
      fill="none"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="12"
    />
  </svg>
  <svg
    class="c1"
    height="384"
    viewBox="0 0 384 384"
    width="384"
  >
    <circle
      cx="192"
      cy="192"
      fill="none"
      r="180"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 363.1901729331 136.3769410125 A 180.0000000000 180.0000000000 0 0 0 192.0000000000 12.0000000000"
      fill="none"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="24"
    />
  </svg>
  <svg
    class="c1"
    height="384"
    viewBox="0 0 384 384"
    width="384"
  >
    <circle
      cx="192"
      cy="192"
      fill="none"
      r="168"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="48"
    />
    <path
      d="M 351.7774947376 140.0851449450 A 168.0000000000 168.0000000000 0 0 0 192.0000000000 24.0000000000"
      fill="none"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="48"
    />
  </svg>
  <svg
    class="c1"
    height="384"
    viewBox="0 0 384 384"
    width="384"
  >
    <circle
      cx="192"
      cy="192"
      fill="none"
      r="144"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="96"
    />
    <path
      d="M 328.9521383465 147.5015528100 A 144.0000000000 144.0000000000 0 0 0 192.0000000000 48.0000000000"
      fill="none"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="96"
    />
  </svg>
  <svg
    class="c1"
    height="384"
    viewBox="0 0 384 384"
    width="384"
  >
    <circle
      cx="192"
      cy="192"
      fill="none"
      r="164.5"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="55"
    />
    <path
      d="M 348.4487969306 141.1667044253 A 164.5000000000 164.5000000000 0 0 0 192.0000000000 27.5000000000"
      fill="none"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="55"
    />
  </svg>
</div>
`;

exports[`Meter type 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  max-width: 100%;
  overflow: hidden;
}

.c1 path {
  -webkit-transition: stroke 0.3s,stroke-width 0.3s;
  transition: stroke 0.3s,stroke-width 0.3s;
}

<div
  class="c0"
>
  <svg
    class="c1"
    height="24"
    preserveAspectRatio="none"
    viewBox="0 0 384 24"
    width="384"
  >
    <path
      d="M 0,12 L 384,12"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 0,12 L 76.8,12"
      fill="none"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="24"
    />
  </svg>
  <svg
    class="c1"
    height="384"
    viewBox="0 0 384 384"
    width="384"
  >
    <circle
      cx="192"
      cy="192"
      fill="none"
      r="180"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 363.1901729331 136.3769410125 A 180.0000000000 180.0000000000 0 0 0 192.0000000000 12.0000000000"
      fill="none"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="24"
    />
  </svg>
  <svg
    class="c1"
    height="384"
    viewBox="0 0 384 384"
    width="384"
  >
    <circle
      cx="192"
      cy="192"
      fill="none"
      r="96"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="192"
    />
    <path
      d="M 283.3014255643 162.3343685400 A 96.0000000000 96.0000000000 0 0 0 192.0000000000 96.0000000000"
      fill="none"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="192"
    />
  </svg>
  <svg
    class="c1"
    height="192"
    viewBox="0 0 384 192"
    width="384"
  >
    <path
      d="M 372.0000000000 192.0000000000 A 180.0000000000 180.0000000000 0 0 0 12.0000000000 192.0000000000"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 46.3769410125 86.1986545874 A 180.0000000000 180.0000000000 0 0 0 12.0000000000 192.0000000000"
      fill="none"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="24"
    />
  </svg>
</div>
`;

exports[`Meter vertical 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  max-width: 100%;
  overflow: hidden;
}

.c1 path {
  -webkit-transition: stroke 0.3s,stroke-width 0.3s;
  transition: stroke 0.3s,stroke-width 0.3s;
}

<div
  class="c0"
>
  <svg
    class="c1"
    height="384"
    preserveAspectRatio="none"
    viewBox="0 0 24 384"
    width="24"
  >
    <path
      d="M 12,0 L 12,384"
      fill="none"
      stroke="#F2F2F2"
      stroke-linecap="square"
      stroke-opacity="0.4"
      stroke-width="24"
    />
    <path
      d="M 12,384 L 12,307.2"
      fill="none"
      stroke="#6FFFB0"
      stroke-linecap="butt"
      stroke-width="384"
    />
  </svg>
</div>
`;
